@@ -24,6 +24,7 @@ public class AcceptedRPC {
 		acceptedRPC.add(Names.Speak);
 		acceptedRPC.add(Names.SetMediaClockTimer);
 		acceptedRPC.add(Names.EncodedSyncPData);
+		acceptedRPC.add(Names.SyncPData);
 	    acceptedRPC.add(Names.PerformAudioPassThru);
 	    acceptedRPC.add(Names.EndAudioPassThru);
 		acceptedRPC.add(Names.SubscribeButton);
